24 Sep 97:
  o Fixed bug with backslash parsing in lgets.
===============================================================================
 6 Oct 97: Released TclX 8.0.0
===============================================================================
18 Oct 97:
  o Fixed several minor bugs.
  o Added change to help proc to search for command if full path is not
    found.  Contributed by Massimo Dal Zotto <dz@cs.unitn.it>.
-------------------------------------------------------------------------------
22 Oct 97:
  o Fixed failure to run variable traces in lvarpush, lvarpop and loop
    commands.
-------------------------------------------------------------------------------
10 Nov 97:
  o Changed TclX auto_loading to use a modified version of the Tcl proc
    rather than defining its own command.  Done to track changes in the 8.0p1
    release.  The loadlibindex commands can no longer handle tclIndex files.
    (*POTENTIAL INCOMPATIBILITY*)     
  o Removed restriction on keyedlist key containing white spaces.  Keys really
    shouldn't,  but this check broke compatibility.
===============================================================================
11 Nov 97: Released TclX 8.0.1
===============================================================================
28 Nov 97:
  o Merge in new auto_load from Tcl 8.0p2.
  o Several minor fixes.
===============================================================================
29 Nov 97: Released TclX 8.0.2
===============================================================================
22 Jan 98: 
  o Added fixes for handling some corner cases in saving and restoring
    interp state on signals. Debugged and submitted by the ever-helpful
    <Viktor-Dukhovni@deshaw.com>.
-------------------------------------------------------------------------------
29 Jan 98:
  o Converted scanfile to use new regular expression facility.
-------------------------------------------------------------------------------