@@ -1381,3 +1381,7 @@
 29 Jan 98:
   o Converted scanfile to use new regular expression facility.
 -------------------------------------------------------------------------------
+2 Feb 98:
+  o Added --with-tcl dir and --with-tk configure options.  Contributed by
+    <Viktor-Dukhovni@deshaw.com>.
+-------------------------------------------------------------------------------
